--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
     </div>
     <div class="container-section">
         <section>
-            <h4>Sorteio das quartas de final da Champions League 2023/24: veja onde assistir e horário</h4>
-            <h6>Grande final está marcada para o dia 1º de junho, no Wembley, em Londres</h6>
+            <h1>Sorteio das quartas de final da <br> Champions League 2023/24:veja onde assistir e horário</h1>
+            <h2>Grande final está marcada para o dia 1º de junho, no Wembley, em Londres</h2>
             <div class="image">
                 <img src="https://lncimg.lance.com.br/cdn-cgi/image/width=850,height=530,fit=crop,quality=75,format=webp/uploads/2022/08/25/6307b7bb6d6ef.jpeg" alt="">
             </div>
-            <p>Champions League 2023/25 chega às quartas de final (Foto: OZAN KOSE / AFP)</p>
+            <div class="texto">
+                <p>Champions League 2023/25 chega às quartas de final (Foto: OZAN KOSE / AFP)</p>
+            </div>
+            
         </section>
     </div>
     
